--- a/frontend/src/assets/css/connectuser.css
+++ b/frontend/src/assets/css/connectuser.css
@@ -11,6 +11,7 @@
     box-shadow: -3px 4px 3px rgb(60 60 60 / 52%);
     border-radius: 2px;
     display: none;
+    z-index: 1;
 }
 
 
@@ -203,7 +204,7 @@
     box-shadow: 1px 3px 6px rgb(60 60 60 / 52%);
     border-radius: 2px;
     display: none;
-
+    z-index: 2;
 }
 
 .openCSMenu {
