--- a/frontend/src/assets/css/useroverlay.css
+++ b/frontend/src/assets/css/useroverlay.css
@@ -3,9 +3,160 @@
     min-height: 89.5%;
     max-height: 89.5%;
     position: absolute;
-    width: 200px;
+    width: 300px;
     right: 5.8%;
     top: 10.5%;
-    background-color: yellow;
+    background-color: #EEEEEE;
     display: block;
+    overflow-y: auto;
+}
+
+#overlay_user_child {
+    height: 100%;
+    font-family: 'Pretendard', sans-serif;
+    font-style: normal;
+}
+
+#overlay_user::-webkit-scrollbar {
+    width: 0;
+}
+
+#overlay_user::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+#overlay_user::-webkit-scrollbar-thumb {
+    background: #3E6578;
+}
+
+#overlay_user::-webkit-scrollbar-thumb:hover {
+    background: #3E6578;
+}
+
+.overlay_child1 {
+    padding: 6% 6.5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.overlay_child1>img {
+    cursor: pointer;
+}
+
+.overlay_child11 {
+    display: flex;
+    align-items: center;
+}
+
+.overlay_child11_1 {
+    margin-right: 10px;
+}
+
+.overlay_child11_2>p {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: 0.15px;
+    text-align: left;
+    color: #3E6578;
+}
+
+.overlay_child11_2>p:last-child {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+}
+
+.overlay_child2 {
+    padding-top: 4px;
+}
+
+.overlay_child21 {
+    display: flex;
+    align-items: center;
+    padding: 11px 0px 8px 15px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0.11px;
+    text-align: left;
+}
+
+.overlay_child21>img {
+    margin-right: 6px;
+    cursor: pointer;
+}
+
+.overlay_child22 {
+    background: white;
+}
+
+.overlay_child22_1 {
+    display: flex;
+    align-items: center;
+    padding: 10px 31px 9px 14px;
+}
+
+.overlay_child22_2 {
+    opacity: 50%;
+}
+
+.overlay_child22_1:not(:last-child) {
+    border-bottom: 1px solid #e1e1e1;
+}
+
+.overlay_child22_1_img {
+    margin-right: 17px;
+}
+
+.overlay_child22_1 p:first-child {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color: #191919;
+}
+
+.overlay_child22_1 p:nth-child(2) {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+    color: #767676;
+}
+
+.overlay_child22_1_p {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.25px;
+    color: #DB484B;
+}
+
+.overlay_child31 {
+    margin-top: 50px;
+    padding-bottom: 60px;
+    text-align: center;
+}
+
+.overlay_child31 button {
+    width: 70%;
+    font-family: 'Pretendard', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    text-align: center;
+    border-radius: 5px;
+    padding: 3% 0%;
+    color: white;
+    border: 0;
+    background: #3E6578;
+}
+
+.overlay_child3 button:hover {
+    background-color: #3e6578e6;
 }
