--- a/frontend/src/assets/css/dashboard.css
+++ b/frontend/src/assets/css/dashboard.css
@@ -20,3 +20,55 @@
 .dashboard::-webkit-scrollbar {
     width: 0;
 }
+
+.modal-header {
+    border-bottom: 0;
+}
+
+.modal-header {
+    border-top: 0;
+}
+
+.modal-title {
+    font-family: 'Pretendard', sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0.18000000715255737px;
+    text-align: left;
+    color: #3E6578;
+}
+
+.pop_username {
+    font-family: 'Pretendard', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.15000000596046448px;
+    text-align: left;
+    color: #191919;
+}
+.pop_btn{
+    color: #3E6578;
+    background: #FFFFFF;
+    border-radius: 3px;
+    padding: 5px 10px;
+    width: 100px;
+    border: 1px solid #3E6578;
+}
+.pop_btn:hover{
+    background: #e1e1e1;
+    color: #3E6578;
+}
+.pop_btn1:hover{
+    background: #57849b;
+    color: #FFFFFF;
+}
+.pop_btn1{
+    color: white;
+    background: #3E6578;
+    border-radius: 3px;
+    border: 0;
+}
