--- a/frontend/src/assets/css/dashboardgraph.css
+++ b/frontend/src/assets/css/dashboardgraph.css
@@ -116,7 +116,6 @@
 }
 
 .dashboard_child12_1>div:last-child, .dashboard_child12_2>div:last-child {
-    background: #A0B9C8;
     width: 70%;
 }
 
@@ -152,18 +151,68 @@
     text-align: left;
     color: #767676;
 }
-.dashboard_child12_graphNum{
+
+.dashboard_child12_graphNum {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 75%;
 }
-.dashboard_child12_graphNum>div{
+
+.dashboard_child12_graphNum>div {
     background: #EEEEEE;
     width: 80%;
-    height: 70%;
-    margin-right: 9%
+    height: 79%;
+    border-radius: 100px 100px;
+    margin-right: 9%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
 }
+
+.dashboard_child12_graphNum>div>p {
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.dashboard_child12_graphNum>div:first-child>p {
+    color: #CE747C;
+}
+
+.dashboard_child12_graphNum>div:first-child>p:first-child {
+    background: #CE747C;
+    height: 34px;
+    width: 34px;
+    border-radius: 50%;
+}
+
+.dashboard_child12_graphNum>div:nth-child(2)>p {
+    color: #64879B;
+}
+
+.dashboard_child12_graphNum>div:nth-child(2)>p:first-child {
+    background: #64879B;
+    height: 34px;
+    width: 34px;
+    border-radius: 50%;
+}
+
+.dashboard_child12_graphNum>div:last-child>p {
+    color: #A0B9C8;
+}
+
+.dashboard_child12_graphNum>div:last-child>p:first-child {
+    background: #A0B9C8;
+    height: 34px;
+    width: 34px;
+    border-radius: 50%;
+}
+
 .dashboard_child12_31 {
     height: 80%;
     display: flex;
