--- a/frontend/src/assets/css/chat.css
+++ b/frontend/src/assets/css/chat.css
@@ -22,6 +22,7 @@
     background: white;
     border-radius: 10px 0 0 10px;
     margin: auto;
+    overflow-y: auto;
 }
 .child1-3{
     padding: 1%;
@@ -63,4 +64,12 @@
 .chatButtons{
     width: 250px;
     margin-top: 8%;
+}
+#chatUserPic{
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+}
+#chatName{
+    width: 130px;
 }
