--- a/frontend/src/assets/css/useroverlay.css
+++ b/frontend/src/assets/css/useroverlay.css
@@ -7,7 +7,7 @@
     right: 5.8%;
     top: 10.5%;
     background-color: #EEEEEE;
-    display: block;
+    display: none;
     overflow-y: auto;
 }
 
