--- a/frontend/src/assets/css/sidepanel.css
+++ b/frontend/src/assets/css/sidepanel.css
@@ -13,6 +13,38 @@
     display: none;
 }
 
+#sidePanel h3 {
+    font-family: 'Pretendard', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0.10000000149011612px;
+    text-align: left;
+    margin-bottom: 0;
+}
+
+#sidePanel h5 {
+    font-family: 'Pretendard', sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    margin-bottom: 0;
+}
+
+#sidePanel p {
+    font-family: 'Pretendard', sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.25px;
+    text-align: left;
+}
+
 .sidePanel_child1 {
     background: #afafafb8;
     grid-area: sPchild1;
@@ -38,4 +70,93 @@
 .sidePanel_child3 {
     background: #FFFFFF;
     grid-area: sPchild3;
+    padding: 4% 3%;
+    overflow-y: auto;
+}
+
+.sidePanel_child3::-webkit-scrollbar {
+    width: 0;
+}
+
+.sidePanel_child31 {
+    border: 1px solid #c5c5c5;
+    border-radius: 4px;
+    margin-bottom: 19.5px;
+}
+
+.sidePanel_child31_1 {
+    padding: 2.5%;
+    display: flex;
+    background: #EEEEEE;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #c5c5c5;
+}
+
+.sidePanel_child31_2 {
+    padding: 0 2.5% 0 2.5%;
+}
+
+.sidePanel_child31_img {
+    margin-right: 8px;
+}
+
+.sidePanel_child31_img img {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+}
+
+.sidePanel_child31_userChatDiv {
+    padding: 9px 0 9px 0;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #e3e3e3;
+}
+
+.sidePanel_child31_chatDetail {
+    width: 100%;
+}
+
+.sidePanel_child31_chatDetail1 {
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+}
+
+.sidePanel_child31_chatDetail1 .badge {
+    padding: 3px 4px;
+}
+
+.sidePanel_child31_3 {
+    text-align: end;
+    padding: 0 2.5% 3px 2.5%;
+}
+
+.sidePanel_child31_3 button, .sidePanel_child31_3 a {
+    background: transparent;
+    border: 0;
+    font-family: 'Pretendard', sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.25px;
+    text-decoration: none;
+    color: black;
+}
+
+.sidePanel_child31_1_btn {
+    display: flex;
+    align-items: center;
+}
+
+.sidePanel_child31_1_btn button {
+    cursor: pointer;
+    color: #999999;
+    background: #FFFFFF;
+    border: 1px solid #999999;
+    padding: 0px 3px;
+    font-size: 13px;
+    font-weight: bolder;
 }
