--- a/frontend/src/assets/css/chat.css
+++ b/frontend/src/assets/css/chat.css
@@ -24,6 +24,9 @@
     margin: auto;
     overflow-y: auto;
 }
+.child1-2::-webkit-scrollbar{
+    width: 0;
+}
 .child1-3{
     padding: 1%;
     height: 95%;
@@ -65,11 +68,150 @@
     width: 250px;
     margin-top: 8%;
 }
-#chatUserPic{
-    width: 50px;
-    height: 50px;
-    border-radius: 100px;
+.userChatParent1{
+    display: flex;
 }
-#chatName{
-    width: 130px;
+.userChatChild1-1{
+    width: 25%;
+
+}
+.userChatChild1-2{
+    width: 50%;
+
+}
+.userChatChild1-3{
+    width: 25%;
+
+}
+#userChatImage{
+    width: 50%;
+    height: 50%;
+}
+#chatUserMsg,#chatUserDate{
+    font-size: 14px;
+}
+#chatUserDate{
+    padding-left: 18%;
+}
+#chatUserBadge{
+    padding-left: 65%;
+}
+.msgParent1{
+    width: 100%;
+    height: 100%;
+}
+.msgChild1-1{
+    height: 8%;
+    /*background: red;*/
+}
+.msgChild1-2{
+    height: 85%;
+    background: palegoldenrod;
+}
+.msgChild1-3{
+    height: 7%;
+    background: #CE747C;
+}
+.masgParent2{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+.msgChild2-1{
+    width: 15%;
+    /*background: paleturquoise;*/
+    margin: auto;
+}
+.msgChild2-2{
+    width: 85%;
+    /*background: blue;*/
+}
+#userMsgImage{
+    width: 40%;
+    height: 40%;
+}
+#msgUserName{
+    margin: auto;
+    cursor: pointer;
+}
+#customBadge{
+    transform: translateX(1500%);
+}
+
+
+
+
+
+
+@media screen and (max-width: 1366px) {
+    .chatParent1{
+        display: flex;
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        border-radius: 10px;
+        background: #e3e3e3;
+    }
+    .child1-1{
+        padding-left: 1%;
+        padding-right: 1%;
+        padding-top: 5%;
+        padding-bottom: 2%;
+        height: 100%;
+        background: white;
+        border-radius: 10px 0 0 10px;
+    }
+    .child1-2{
+        padding: 1%;
+        height: 95%;
+        background: white;
+        border-radius: 10px 0 0 10px;
+        margin: auto;
+        overflow-y: auto;
+    }
+    .child1-3{
+        padding: 1%;
+        height: 95%;
+        background: white;
+        margin: auto;
+        border-radius: 0 10px 10px 0;
+    }
+    #userImg{
+        width: 80px;
+        height: 80px;
+        border-radius: 100%;
+    }
+    .emailHead,.phoneHead{
+        width: 70px;
+    }
+    #memo{
+        margin: auto;
+        width: 86%;
+        height: 30%;
+        border: 1px solid gray;
+        border-radius: 10px 10px 10px 10px;
+        padding: 2%;
+        overflow-y: auto;
+    }
+    .memoHead,.memoHeadIcon{
+        font-size: 15px;
+        font-weight: bold;
+        width: 200px;
+    }
+    .memoHeadIcon{
+        padding-left: 30%;
+    }
+    .memoMsg{
+        background: #EEEEEE;
+        padding: 4%;
+        border-radius: 5px;
+        font-size:13px
+    }
+    .chatButtons{
+        width: 200px;
+        margin-top: 7%;
+    }
+    #alergies{
+        font-size: 15px;
+    }
 }
