--- a/frontend/src/assets/css/individualpanel.css
+++ b/frontend/src/assets/css/individualpanel.css
@@ -30,7 +30,18 @@
 
 .individualPanel_child2 {
     width: 77%;
-    background: green;
     height: 100%;
     border-radius: 0 8px 8px 0;
+}
+
+.individualPanel_child21 {
+    height: 12%;
+    background: #3E6578;
+    border-radius: 0 8px 0 0;
+}
+
+.individualPanel_child22 {
+    height: 88%;
+    background: white;
+    border-radius: 0 0 8px 0;
 }
