--- a/frontend/src/assets/css/individualpanel.css
+++ b/frontend/src/assets/css/individualpanel.css
@@ -23,9 +23,10 @@
 
 .individualPanel_child1 {
     width: 23%;
-    background: red;
+    background: white;
     height: 100%;
     border-radius: 8px 0 0 8px;
+    padding: 1%;
 }
 
 .individualPanel_child2 {
@@ -44,4 +45,8 @@
     height: 88%;
     background: white;
     border-radius: 0 0 8px 0;
+}
+.indiButtons{
+    width: 250px;
+    margin-top: 5%;
 }
