--- a/frontend/src/assets/css/individualpanel.css
+++ b/frontend/src/assets/css/individualpanel.css
@@ -29,23 +29,23 @@
     padding: 1%;
 }
 
-.individualPanel_child2 {
-    width: 77%;
-    height: 100%;
-    border-radius: 0 8px 8px 0;
-}
+/*.individualPanel_child2 {*/
+/*    width: 77%;*/
+/*    height: 100%;*/
+/*    border-radius: 0 8px 8px 0;*/
+/*}*/
 
-.individualPanel_child21 {
-    height: 12%;
-    background: #3E6578;
-    border-radius: 0 8px 0 0;
-}
+/*.individualPanel_child21 {*/
+/*    height: 12%;*/
+/*    background: #3E6578;*/
+/*    border-radius: 0 8px 0 0;*/
+/*}*/
 
-.individualPanel_child22 {
-    height: 88%;
-    background: white;
-    border-radius: 0 0 8px 0;
-}
+/*.individualPanel_child22 {*/
+/*    height: 88%;*/
+/*    background: white;*/
+/*    border-radius: 0 0 8px 0;*/
+/*}*/
 .indiButtons{
     width: 250px;
     margin-top: 5%;
