--- a/frontend/src/assets/css/individualpanel.css
+++ b/frontend/src/assets/css/individualpanel.css
@@ -27,6 +27,10 @@
     height: 100%;
     border-radius: 8px 0 0 8px;
     padding: 1%;
+    overflow-y: auto;
+}
+.individualPanel_child1::-webkit-scrollbar{
+    width: 0;
 }
 
 /*.individualPanel_child2 {*/
