--- a/frontend/src/assets/css/individualpanel2.css
+++ b/frontend/src/assets/css/individualpanel2.css
@@ -1,4 +1,3 @@
-
 .individualPanel_main h4 {
     font-family: 'Pretendard', sans-serif;
     font-size: 18px;
@@ -9,7 +8,6 @@
     letter-spacing: 0.15000000596046448px;
     margin-bottom: 0;
 }
-
 .individualPanel_main h5 {
     font-family: 'Pretendard', sans-serif;
     font-size: 14px;
@@ -19,14 +17,21 @@
     letter-spacing: 0.10000000149011612px;
     margin-bottom: 0;
 }
-
-
+.individualPanel_main p {
+    font-family: 'Pretendard', sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    color: #767676;
+}
 .individualPanel_child2 {
     width: 77%;
     height: 100%;
     border-radius: 0 8px 8px 0;
 }
-
 .individualPanel_child21 {
     display: flex;
     align-items: center;
@@ -35,18 +40,15 @@
     background: #3E6578;
     border-radius: 0 8px 0 0;
 }
-
 .individualPanel_child22 {
     height: 88%;
     background: #EEEEEE;
     border-radius: 0 0 8px 0;
     display: flex;
 }
-
 .individualPanel_child22_1::-webkit-scrollbar, .individualPanel_child22_2::-webkit-scrollbar {
     width: 0;
 }
-
 .individualPanel_child22_1 {
     width: 70%;
     height: 100%;
@@ -54,15 +56,42 @@
     margin: 0 3px;
     overflow-y: auto;
 }
-
 .individualPanel_child22_2 {
     width: 30%;
     height: 100%;
+    padding-bottom: 3%;
     overflow-y: auto;
+    background: #EEEEEE;
+    border-radius: 0 0 8px 0;
 }
-
 .individualPanel_child22_2_child {
     background: white;
-    padding: 4.5% 5.5% 4.5% 5.5%;
+    padding: 4.5% 5.5%;
     margin-bottom: 2.5px;
+}
+.individual_History_date {
+    padding: 2% 4.5%;
+}
+.individual_History_medics {
+    background: white;
+    padding: 4.5% 5.5%;
+    margin-bottom: 2.5px;
+    display: flex;
+    align-items: center;
+}
+.medicsImg img {
+    margin-right: 10px;
+}
+.medicsH5 h5 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+    text-align: left;
+}
+.individual_History_medic {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
