--- a/frontend/src/assets/css/individualpanel2.css
+++ b/frontend/src/assets/css/individualpanel2.css
@@ -121,6 +121,7 @@
     height: 200px;
     background: bisque;
     width: 100%;
+    display: flex;
 }
 
 .individualPanel_child22_date {
@@ -134,6 +135,18 @@
     cursor: pointer;
 }
 
-.individualPanel_child22_12child input{
+.individualPanel_child22_12child input {
     margin-right: 20px;
+}
+
+.individualPanel_graph1 {
+    background: green;
+    width: 35%;
+    height: 100%;
+}
+
+.individualPanel_graph2 {
+    background: yellow;
+    height: 100%;
+    width: 65%;
 }
