--- a/frontend/src/assets/css/individualpanel.css
+++ b/frontend/src/assets/css/individualpanel.css
@@ -15,7 +15,7 @@
 
 .individualPanel_main {
     width: 90%;
-    height: 86%;
+    height: 88.5%;
     margin: auto;
     display: flex;
     border-radius: 8px;
@@ -26,31 +26,22 @@
     background: white;
     height: 100%;
     border-radius: 8px 0 0 8px;
-    padding: 1%;
+    padding: 2% 1.5%;
     overflow-y: auto;
 }
-.individualPanel_child1::-webkit-scrollbar{
+
+.individualPanel_child1::-webkit-scrollbar {
     width: 0;
 }
 
-/*.individualPanel_child2 {*/
-/*    width: 77%;*/
-/*    height: 100%;*/
-/*    border-radius: 0 8px 8px 0;*/
-/*}*/
+.userPanel_table {
+    font-family: 'Pretendard', sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    width: 100%;
 
-/*.individualPanel_child21 {*/
-/*    height: 12%;*/
-/*    background: #3E6578;*/
-/*    border-radius: 0 8px 0 0;*/
-/*}*/
-
-/*.individualPanel_child22 {*/
-/*    height: 88%;*/
-/*    background: white;*/
-/*    border-radius: 0 0 8px 0;*/
-/*}*/
-.indiButtons{
-    width: 250px;
-    margin-top: 5%;
 }
