--- a/frontend/src/assets/css/dashboarddatatables.css
+++ b/frontend/src/assets/css/dashboarddatatables.css
@@ -20,8 +20,9 @@
     margin-right: 5px;
     margin-bottom: 5px;
     outline: none;
-    background: #3E6578;
-    color: white;
+    background: white;
+    color: #3E6578;
+    border: 1px solid #3E6578;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
@@ -156,7 +157,7 @@ div.dataTables_wrapper div.dataTables_paginate {
     color: #767676;
 }
 
-#datatable td{
+#datatable td {
     font-size: 12.7px;
     font-weight: 400;
     line-height: 20px;
