--- a/frontend/src/assets/css/alergies.css
+++ b/frontend/src/assets/css/alergies.css
@@ -1,17 +1,49 @@
-.individualPanel_child3{
+.individualPanel_child3 {
     width: 100%;
     height: 100%;
     border-radius: 0 8px 8px 0;
     background: white;
     padding: 2%;
     overflow-y: auto;
+    border-left:  2px solid #EEEEEE;
 }
-.individualPanel_child3::-webkit-scrollbar{
+
+.individualPanel_child3 thead {
+    background: #EEEEEE;
+    font-family: 'Pretendard', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0.10000000149011612px;
+}
+
+.individualPanel_child3 td {
+    font-family: 'Pretendard',sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.25px;
+    text-align: left;
+
+}
+
+.individualPanel_child3::-webkit-scrollbar {
     width: 0;
 }
-.alergiesHead{
+
+.alergiesHead {
     color: #3E6578;
+    font-family: 'Pretendard', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.15000000596046448px;
+    text-align: left;
 }
-.alergiesTable{
-    padding: 1% ;
+
+.alergiesTable {
+    padding: 1%;
 }
