--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -85,3 +85,17 @@
     cursor: pointer;
     border-radius: 50%;
 }
+
+@media screen and (min-width:1920px) {
+    .header {
+        height: 7%;
+    }
+
+    .nav_child1 {
+        width: 460px;
+    }
+
+    .nav_child2 {
+        width: 207px;
+    }
+}
