--- a/frontend/src/assets/css/signup.css
+++ b/frontend/src/assets/css/signup.css
@@ -367,8 +367,20 @@
         margin: 0% 0 13% 0;
     }
 }
-
-@media screen and (max-width:1920px) {
+@media screen and (max-width:1024px) {
+    .signup_cont {
+        width: 47%;
+    }
+}
+@media screen and (max-width:1280px) {
+    .passIconSet>img{
+        margin-top: 3%;
+    }
+    .signup_cont {
+        width: 41%;
+    }
+}
+@media screen and (min-width:1920px) {
     .passIconSet>img{
         margin-top: 2.5%;
     }
