--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -86,6 +86,16 @@
     border-radius: 50%;
 }
 
+@media screen and (max-width:1280px) {
+    .header {
+        height: 8.5%;
+    }
+
+    .nav_child2 {
+        width: 202px;
+    }
+}
+
 @media screen and (min-width:1920px) {
     .header {
         height: 7%;
