--- a/frontend/src/assets/css/sidebar.css
+++ b/frontend/src/assets/css/sidebar.css
@@ -23,3 +23,9 @@
 .sidebar_icon ul li:not(:last-child) {
     margin-bottom: 39px;
 }
+
+@media screen and (max-width:1024px) {
+    .sidebar_icon ul {
+        padding-left: 11px;
+    }
+}
