--- a/frontend/src/assets/css/signin.css
+++ b/frontend/src/assets/css/signin.css
@@ -186,7 +186,22 @@
     }
 }
 
-@media screen and (max-width:1920px) {
+
+@media screen and (max-width:1024px) {
+    .signin_cont {
+        width: 49%;
+        height: 74%;
+    }
+}
+
+@media screen and (max-width:1280px) {
+    .signin_cont {
+        width: 38.5%;
+        height: 73%;
+    }
+}
+
+@media screen and (min-width:1920px) {
     .signin_cont {
         width: 31.5%;
         height: 71%;
