--- a/frontend/src/assets/css/useroverlay.css
+++ b/frontend/src/assets/css/useroverlay.css
@@ -150,6 +150,12 @@
     background-color: #3e6578e6;
 }
 
+
+@media screen and (max-width:1280px) {
+    #overlay_user{
+        top: 8.5%;
+    }
+}
 @media screen and (min-width:1920px) {
     #overlay_user {
         height: 93%;
@@ -157,7 +163,6 @@
         max-height: 93%;
         top: 7%;
     }
-
     .overlay_child1 {
         padding: 8% 6.5%;
     }
