Final-style-update

--- a/frontend/src/assets/css/individualpanel2.css
+++ b/frontend/src/assets/css/individualpanel2.css
@@ -199,7 +199,7 @@
     }
 }
 
-@media screen and (max-width:1280px) {
+@media screen and (max-width:1280px)and (min-width:1026px) {
     .individualPanel_child1 {
         width: 25%;
     }
