--- a/frontend/src/assets/css/dashboardgraph.css
+++ b/frontend/src/assets/css/dashboardgraph.css
@@ -269,7 +269,7 @@
     }
 }
 
-@media screen and (max-width:1280px) {
+@media screen and (max-width:1280px) and (min-width:1026px) {
     .dashboard_child12_graphNum>div {
         margin-right: 5%;
         width: 90%;
