--- a/frontend/src/assets/css/signup.css
+++ b/frontend/src/assets/css/signup.css
@@ -146,7 +146,10 @@
 
 .signup_avatar>img {
     border-radius: 50%;
+    width: 70px;
+    height: 70px;
 }
+
 
 .signup_label {
     font-family: 'Pretendard', sans-serif;
@@ -333,6 +336,48 @@
     margin-top: 4%;
 }
 
+
+
+.custom-file {
+    display: flex;
+    position: absolute;
+    transform: translate(161px, -27px);
+}
+
+.custom-file>div {
+    height: 27px;
+    border-radius: 50%;
+    display: flex;
+    width: 27px;
+
+}
+
+.custom-file-input {
+    user-select: auto;
+    width: 100%;
+    opacity: 0;
+}
+
+.custom-file-label {
+    cursor: pointer;
+    z-index: 5;
+    user-select: auto;
+    position: absolute;
+    background: #3E6578;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.custom-file-label::after {
+    display: none;
+}
+
+.custom-file-label img {
+    user-select: auto;
+}
+
+
 @media screen and (max-width:470px) {
 
     .signup_cont {
@@ -367,21 +412,37 @@
         margin: 0% 0 13% 0;
     }
 }
-@media screen and (max-width:1024px) {
+
+@media screen and (max-width:1025px) {
     .signup_cont {
         width: 47%;
     }
+
+    .custom-file {
+        transform: translate(186px, -27px);
+    }
 }
-@media screen and (max-width:1280px) {
-    .passIconSet>img{
+
+@media screen and (max-width:1280px) and (min-width:1026px) {
+    .passIconSet>img {
         margin-top: 3%;
     }
+
     .signup_cont {
         width: 41%;
     }
+
+    .custom-file {
+        transform: translate(202px, -27px);
+    }
 }
+
 @media screen and (min-width:1920px) {
-    .passIconSet>img{
+    .passIconSet>img {
         margin-top: 2.5%;
+    }
+
+    .custom-file {
+        transform: translate(231px, -27px);
     }
 }
