--- a/frontend/src/assets/css/signup.css
+++ b/frontend/src/assets/css/signup.css
@@ -140,14 +140,23 @@
 }
 
 .signup_avatar {
-    text-align: center;
-    margin: 12% 0 9% 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.signup_avatar>img {
-    border-radius: 50%;
+.signup_avatar>div {
+    text-align: center;
+    margin: 12% 0 9% 0;
     width: 70px;
     height: 70px;
+}
+
+.signup_avatar>div>img {
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
@@ -341,7 +350,7 @@
 .custom-file {
     display: flex;
     position: absolute;
-    transform: translate(161px, -27px);
+    transform: translate(44px, -27px);
 }
 
 .custom-file>div {
@@ -419,7 +428,7 @@
     }
 
     .custom-file {
-        transform: translate(186px, -27px);
+        transform: translate(44px, -27px);
     }
 }
 
@@ -433,7 +442,7 @@
     }
 
     .custom-file {
-        transform: translate(202px, -27px);
+        transform: translate(44px, -27px);
     }
 }
 
@@ -443,6 +452,6 @@
     }
 
     .custom-file {
-        transform: translate(231px, -27px);
+        transform: translate(44px, -27px);
     }
 }
