--- a/frontend/src/assets/css/forget.css
+++ b/frontend/src/assets/css/forget.css
@@ -142,3 +142,15 @@
     letter-spacing: 0px;
     color: #767676;
 }
+
+#successEmailMsg {
+    font-family: 'Pretendard', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 60px;
+}
