--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -61,7 +61,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 191px;
 }
 
 .nav_Child21 p {
@@ -84,6 +83,10 @@
 .nav_Child22>img {
     cursor: pointer;
     border-radius: 50%;
+    object-fit: cover;
+    width: 38px;
+    height: 38px;
+    margin-left: 10px;
 }
 
 @media screen and (max-width:1280px) {
